--- a/Views/Yields/Index.cshtml
+++ b/Views/Yields/Index.cshtml
@@ -15,15 +15,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.Yield)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CostPerTray)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DateIn)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DateOut)
-            </th>
+            @*<th>
+                    @Html.DisplayNameFor(model => model.CostPerTray)
+                </th>*@
+            @*<th>
+                    @Html.DisplayNameFor(model => model.DateIn)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DateOut)
+                </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.Product)
             </th>
@@ -31,29 +31,30 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Yield)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CostPerTray)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateIn)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateOut)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Product.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.YieldId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.YieldId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.YieldId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Yield)
+                </td>
+                @*<td>
+                        @Html.DisplayFor(modelItem => item.CostPerTray)
+                    </td>*@
+                @*<td>
+                        @Html.DisplayFor(modelItem => item.DateIn)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DateOut)
+                    </td>*@
+                <td>
+                    @Html.DisplayFor(modelItem => item.Product.Id)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.YieldId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.YieldId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.YieldId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
