--- a/Views/Home/index.cshtml
+++ b/Views/Home/index.cshtml
@@ -10,7 +10,7 @@
                 <!-- Uncomment below if you prefer to use an image logo -->
                 <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
             </div>
-
+            <!--Navigation section-->
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
                     <li class="menu-active"><a href="#hero">Home</a></li>
@@ -35,7 +35,7 @@
         </div>
     </header><!-- #header -->
     <!--==========================
-      Hero Section
+      Microgreens home section
     ============================-->
     <section id="hero" class="wow fadeIn">
         <div class="hero-container">
@@ -719,7 +719,7 @@
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
-    @*<!-- JavaScript Libraries -->
+    <!-- JavaScript Libraries -->
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/jquery/jquery-migrate.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -733,7 +733,7 @@
     <script src="contactform/contactform.js"></script>
 
     <!-- Template Main Javascript File -->
-    <script src="js/main.js"></script>*@
+    <script src="js/main.js"></script>
 
 </body>
 
