--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -88,16 +88,16 @@
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/jquery/jquery.min.js"></script>
+
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     </environment>
 
-    @*
-        <script src="~/js/site.js"></script>
-        <script src="~/js/contact_me.js"></script>
-        <script src="~/js/jquery.prettyPhoto.js"></script>
-        <script src="~/js/main.js"></script>
-        <script src="~/js/SmoothScroll.js"></script>
-        <script src="~/js/jquery.isotope.js"></script>*@
+
+    <script src="~/js/site.js"></script>
+
+    <script src="~/js/main.js"></script>
+
 
 
     <environment exclude="Development">
