--- a/Views/Yields/Details.cshtml
+++ b/Views/Yields/Details.cshtml
@@ -16,24 +16,24 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Yield)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CostPerTray)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CostPerTray)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DateIn)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DateIn)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DateOut)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DateOut)
-        </dd>
+        @*<dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.CostPerTray)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.CostPerTray)
+            </dd>*@
+        @*<dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.DateIn)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.DateIn)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.DateOut)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.DateOut)
+            </dd>*@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Product)
         </dt>
