--- a/Views/Yields/Edit.cshtml
+++ b/Views/Yields/Edit.cshtml
@@ -18,26 +18,26 @@
                 <input asp-for="Yield" class="form-control" />
                 <span asp-validation-for="Yield" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CostPerTray" class="control-label"></label>
-                <input asp-for="CostPerTray" class="form-control" />
-                <span asp-validation-for="CostPerTray" class="text-danger"></span>
-            </div>
+            @*<div class="form-group">
+                    <label asp-for="CostPerTray" class="control-label"></label>
+                    <input asp-for="CostPerTray" class="form-control" />
+                    <span asp-validation-for="CostPerTray" class="text-danger"></span>
+                </div>*@
             <div class="form-group">
                 <label asp-for="ProductsId" class="control-label"></label>
                 <select asp-for="ProductsId" class="form-control" asp-items="ViewBag.ProductsId"></select>
                 <span asp-validation-for="ProductsId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DateIn" class="control-label"></label>
-                <input asp-for="DateIn" class="form-control" />
-                <span asp-validation-for="DateIn" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateOut" class="control-label"></label>
-                <input asp-for="DateOut" class="form-control" />
-                <span asp-validation-for="DateOut" class="text-danger"></span>
-            </div>
+            @*<div class="form-group">
+                    <label asp-for="DateIn" class="control-label"></label>
+                    <input asp-for="DateIn" class="form-control" />
+                    <span asp-validation-for="DateIn" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="DateOut" class="control-label"></label>
+                    <input asp-for="DateOut" class="form-control" />
+                    <span asp-validation-for="DateOut" class="text-danger"></span>
+                </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
